<resources>
    <!--   <string name="app_name">同城交友</string>-->
    <string name="app_name">探探寂陌陌生人-求约爱</string>
    <string name="app_home_page">首页</string>
    <string name="app_im_page">聊天</string>
    <string name="find">发现</string>
    <string name="app__my_page">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_one_menu_good_select">精选</string>
    <string name="home_one_menu_same_city">同城</string>
    <string name="reward">打赏</string>
    <string name="send_msg">发消息</string>
    <string name="appointment">约会</string>
    <string name="send_flowers">送花</string>
    <string name="str_fen">粉丝</string>
    <string name="wacth">关注</string>
    <string name="dynamic">动态</string>
    <string name="flower">花束</string>
    <string name="activity_name_dynamic_datails">动态详情</string>
    <string name="str_login">登录</string>
    <string name="str_register">注册</string>
    <string name="username">用户名 : </string>
    <string name="input_phone_number">输入手机号</string>
    <string name="password">密  码 : </string>
    <string name="forget_password">忘记密码</string>
    <string name="get_security_code">获取验证码</string>
    <string name="sex">性别 : </string>
    <string name="boy">男生</string>
    <string name="girls">女生</string>
    <string name="input_Security_code">输入验证码</string>
    <string name="not_empty">不能为空</string>
    <string name="request_failed">请求失败</string>
    <string name="agein_get_code">再次获取</string>
    <string name="take_picture">拍照</string>
    <string name="photo_album">相册</string>
    <string name="cancel">取消</string>
    <string name="input_password">  输入密码</string>
    <string name="framat">格式</string>
    <string name="error">错误</string>
    <string name="net_Exception">网络异常</string>
    <string name="upload_failure">上传失败</string>
    <string name="upload">上传</string>
    <string name="success">成功</string>
    <string name="private_hat">私聊</string>
    <string name="friend">好友</string>
    <string name="loading">加载中....</string>
    <string name="already">已经</string>
    <string name="one_another">互相</string>
    <string name="no">没有</string>
    <string name="publish">发布</string>
    <string name="send_dynamic">发布动态</string>
    <string name="finish">完成</string>
    <string name="photo">图片</string>
    <string name="xml_send_red_packet">发个红包，拉近距离</string>
    <string name="input_money">输入金额</string>
    <string name="weixin_play">微信支付</string>
    <string name="aliplay_play">支付宝支付</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_affirm">支付确认中</string>
    <string name="pay_failure">支付失败</string>
    <string name="authentication">认证</string>
    <string name="withdraw_deposit">提现</string>
    <string name="order">单</string>
    <string name="code_timeout">身份过期,请重新登录</string>
    <string name="login_action">未登录，请登录，</string>
    <string name="send_dynamic_wacth_pic">发红包,看照片</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="temporary_does_not">暂不支持大于10M的视频！</string>
    <string name="Video_footage">拍摄录像</string>
    <string name="ok">ok</string>
    <string name="nike">昵称</string>
    <string name="renzhengxin">认证信息</string>
    <string name="height">身高</string>
    <string name="address">地址</string>
    <string name="KG">KG</string>
    <string name="cm">cm</string>
    <string name="Provice">省</string>
    <string name="City">市</string>
    <string name="already_Certification">已认证</string>
    <string name="Certificationing">认证中</string>
    <string name="not_Certificationing">未认证</string>
    <string name="signed">商业签约</string>
    <string name="about_rice">约饭</string>
    <string name="iv_asleep">发呆</string>
    <string name="wacth_movie">看电影</string>
    <string name="tixian_succ">提交</string>
    <string name="system_time">系统受理</string>
    <string name="money">金额</string>
    <string name="enable_money">可提现金额</string>
    <string name="account_number">账号 : </string>
    <string name="account_error_hint">请务必添加正确的账号,以免提现失败</string>
    <string name="name">名字</string>
    <string name="alipay">支付宝</string>
    <string name="add_card">添加卡</string>
    <string name="switch_card">选择一张支付卡</string>
    <string name="money_get">只能整取</string>
    <string name="money_number_more_200">金额必须大于等于两百</string>
    <string name="add_winxin_card">添加微信</string>
    <string name="add_alipay_card">添加支付宝</string>
    <string name="winxinpay">微信</string>
    <string name="pic_more_nine">添加的图片不能大于九张</string>
    <string name="hint_dynamic_text">此时此地，想与大家分享什么？</string>
    <string name="not_success">拒绝</string>
    <string name="tixining">提现中</string>
    <string name="all_income">总收入</string>
    <string name="day_income">当日收入</string>
    <string name="yuan">元</string>
    <string name="show_wacth_redpacket">%1$s人看了照片，共%2$s元</string>
    <string name="pay">支付</string>
    <string name="switch_flower">请选择花束</string>
    <string name="rongyun_offline">您已在别的设备上登录，请重新登录</string>
    <string name="Remove_the_notification">移除t通知</string>
    <string name="Logoff_notification">下线通知</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="text_numer_more_150">字数不能超过150</string>
    <string name="renzheng_rule">*   更多推荐机会，更多粉丝关注；\n\n\n*   开通粉丝打赏、送花、约会功能；\n\n\n*   助你获得商业签约机会</string>
    <string name="input">输入</string>
    <string name="input_text_number_100">输入文字不能大于一百</string>
    <string name="search">搜索</string>
    <string name="avater_change">头像：</string>
    <string name="username_change">昵称：</string>
    <string name="sex_change">性别：</string>
    <string name="birthday_change">生日:</string>
    <string name="address_change">所在地:</string>
    <string name="personalized_signature_change">个性签名：</string>
    <string name="user_introduction_change">自我简介: </string>
    <string name="education_change">学历：</string>
    <string name="heigth_change">身高：</string>
    <string name="weight_change">体重：</string>
    <string name="job_change">职业：</string>
    <string name="not_available">暂无</string>
    <string name="nike_name_change">昵称：</string>
    <string name="signature">个性签名</string>
    <string name="introduction">简介</string>
    <string name="education">教育</string>
    <string name="job">工作</string>
    <string name="weight">体重</string>
    <string name="change_user_info">修改资料</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="again_input">再次输入</string>
    <string name="reset">重置</string>
    <string name="not_same">不一样</string>
    <string name="select_pic">选择图片</string>
    <string name="action">操作</string>
    <string name="delete">删除</string>
    <string name="report">举报</string>
    <string name="apply_renzheng">申请认证</string>
    <string name="renzheng_condition">1.上传不少于六张照片，可以从相册选择，也可直接拍摄上传（拍摄上传会加分哦）；\n\n2.请务必保证照片等个人信息的真实有效。</string>
    <string name="red_person_renzheng">红人认证</string>
    <string name="pic_size_error">照片的数量不正确</string>
    <string name="network_error">网络异常请稍后再试</string>
    <string name="login_code_timeout">身份信息已过期，请重新登录</string>
    <string name="down_success">下载成功</string>
    <string name="pdateNow">立即安装</string>
    <string name="locationing">定位中......</string>
    <string name="change_password">修改密码</string>
    <string name="setting">设置</string>
    <string name="not_dredge">暂未开通</string>
    <string name="person_info">个人信息</string>
    <string name="my_wacth">我关注的</string>
    <string name="my_fen">关注我的</string>
    <string name="flower_msg">鲜花代表我的心意！</string>
    <string name="birthday">生日</string>
    <string name="together">相互</string>
    <string name="not_search_reason">没有找相关用户</string>
    <string name="pic_size_not_six">照片不能少于六张</string>
    <string name="not_low_one">少于一元</string>
    <string name="not_more">超过上限</string>
    <string name="show_verson_name">版本号 ：</string>
    <string name="already_wacth">已关注</string>
    <string name="rank">排行</string>
    <string name="experience_gift">经验礼物</string>
    <string name="nearby">附近</string>
    <string name="up_dynamic">置顶</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请重试</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="filter">筛选</string>
    <string name="nearby_wacth_boy">只看男</string>
    <string name="nearby_wacth_girl">只看女</string>
    <string name="nearby_all">全部</string>
    <string name="dynamic_publish_edittext_hint">分享这一刻想法，付费动态需要累积粉丝才能获取更好的收益哦。</string>
    <string name="dynamic_charge">是否设置为收费动态</string>
    <string name="dynamic_show_adress">地址显示</string>
    <string name="add_lable">添加标签</string>
    <string name="pic">图片</string>
    <string name="video">视频</string>
    <string name="voice">语音</string>
    <!-- PictureSelectorActivity -->
    <string name="picsel_toolbar">图片</string>
    <string name="picsel_toolbar_send">发送</string>
    <string name="picsel_toolbar_send_num">发送(%d/</string>
    <string name="picsel_pictype">图片</string>
    <string name="picsel_toolbar_preview">预览</string>
    <string name="picsel_toolbar_preview_num">预览(%d)</string>
    <string name="picsel_selected_max">您最多只能选择9张图片</string>
    <string name="picsel_take_picture">拍摄照片</string>
    <string name="picsel_catalog_allpic">所有图片</string>
    <string name="picsel_catalog_number">%d张</string>
    <string name="press_to_speak">按住说话</string>
    <string name="lable_is_empty">请选择标签</string>
    <string name="dynamic_content_is_empty">请选择图片/语音/视频</string>
    <string name="dynamic_pic_not_more_6">图片不能少于六张</string>
    <string name="input_not_empty">输入不能为空</string>
    <string name="publish_failure">发布失败</string>
    <string name="vip_enjoy_prerogative">VIP享受多种特权</string>
    <string name="vip_combo">VIP套餐</string>
    <string name="vip_12_low_money">省300元</string>
    <string name="vip_3_low_money">省30元</string>
    <string name="tv_recommend">推荐</string>
    <string name="vip_prerogative_explain">VIP 特权说明</string>
    <string name="vip_prerogative_explain_">1.免费查看所有会员的私密（收费）动态；\n2.可与全站任意会员免费聊天；\n3.成为超级认证会员，享受付费认证会员的一切特权。</string>
    <string name="immediately_dredge">立即开通</string>
    <string name="appbar_vip">开通VIP会员</string>
    <string name="buy_dynamic_vip">成为VIP 全站免费看</string>
    <string name="upgrade_vip">升级 VIP</string>
    <string name="single_buy">单独购买</string>
    <string name="combo_type"><![CDATA[ %1$s个月，<font color="#ff8201">%2$s</font> 元 ]]>  </string>
    <string name="refresh_page">刷新页面</string>
    <string name="not_certification">你还没认证，请认证</string>


</resources>
