<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/action_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/app_back_icon" />

    <TextView
        android:id="@+id/iv_user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableTop="@mipmap/ic_launcher"
        android:text="@string/xml_send_red_packet" />

    <EditText
        android:id="@+id/et_input_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/input_money" />

    <GridView
        android:id="@+id/gv_pic_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="@dimen/x30"
        android:numColumns="3"
        android:verticalSpacing="@dimen/x30"></GridView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_weixin_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x50"
            android:background="@color/background_red_color"
            android:text="@string/weixin_play" />

        <TextView
            android:id="@+id/tv_aliplay_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x50"
            android:background="@color/background_red_color"
            android:text="@string/aliplay_play" />
    </RelativeLayout>
</LinearLayout>