<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layou_navigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y160"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_home_page"
            style="@style/home_text"
            android:text="@string/app_home_page" />

        <TextView
            android:id="@+id/tv_im_page"
            style="@style/home_text"
            android:text="@string/app_im_page" />

        <TextView
            android:id="@+id/tv_center_page"
            style="@style/home_text"
            android:text="@string/app_home_page" />

        <TextView
            android:id="@+id/tv_find_page"
            style="@style/home_text"
            android:text="@string/app_find_page" />

        <TextView
            android:id="@+id/tv_my_page"
            style="@style/home_text"
            android:text="@string/app__my_page" />

    </LinearLayout>

    <ImageView
        android:id="@+id/view_line"
        style="@style/app_line_horizontal"
        android:layout_above="@+id/layou_navigation" />


    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view_line"
        android:background="@android:color/holo_blue_bright">'

    </FrameLayout>
</RelativeLayout>
