<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView

        android:id="@+id/user_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y240"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher" />

    <ImageView
        android:layout_marginLeft="@dimen/y30"
        android:id="@+id/iv_user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_background"
        android:layout_marginTop="@dimen/user_icon"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_background"
        android:layout_toRightOf="@+id/iv_user_icon"
        android:text="mingzi" />

    <LinearLayout
        android:id="@+id/layout_text_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_user_name"
        android:layout_toRightOf="@+id/iv_user_icon"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_fen_number"
            style="@style/text_user_info_number"
            android:text="11111" />

        <TextView
            android:id="@+id/tv_wacth_number"
            style="@style/text_user_info_number"
            android:text="11111" />

        <TextView
            android:id="@+id/tv_dynamic_number"
            style="@style/text_user_info_number"
            android:text="11111" />

        <TextView
            android:id="@+id/tv_flower_number"
            style="@style/text_user_info_number"
            android:text="11111" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layot_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_text_number"
        android:layout_toRightOf="@+id/iv_user_icon"
        android:orientation="horizontal">

        <TextView
            style="@style/text_user_info_number"
            android:text="@string/str_fen" />

        <TextView
            style="@style/text_user_info_number"
            android:text="@string/wacth" />

        <TextView
            style="@style/text_user_info_number"
            android:text="@string/dynamic" />

        <TextView
            style="@style/text_user_info_number"
            android:text="@string/flower" />


    </LinearLayout>
    <TextView
        android:layout_margin="@dimen/y30"
        android:padding="@dimen/y15"
        android:textColor="@color/text_black_color"
        android:textSize="18sp"
        android:background="@drawable/shape_two_half_round"
        android:gravity="center"
        android:text="@string/wacth"
        android:layout_below="@+id/layot_text"
        android:id="@+id/tv_wacth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>