<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/y416"
    android:background="@color/background_white_color">

    <RelativeLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y190"
        android:layout_margin="@dimen/x30"
        android:background="@drawable/shape_background_text_white_color">


        <ImageView
            android:id="@+id/center_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y5"
            android:layout_centerVertical="true"
            android:src="@drawable/shape_solid_horizontal_holine" />

        <TextView
            android:id="@+id/tv_security_code"
            style="@style/textview_login"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y92"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/get_security_code" />

        <ImageView
            android:layout_width="@dimen/x3"
            android:layout_height="@dimen/y94"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/tv_security_code"
            android:background="@color/text_gray_color" />

        <EditText
            android:id="@+id/et_phone_number"
            style="@style/edittext_login"
            android:layout_height="@dimen/y92"
            android:layout_above="@+id/center_line"
            android:gravity="center_vertical"
            android:hint="@string/input_phone_number" />

        <EditText
            style="@style/edittext_login"
            android:layout_height="@dimen/y92"
            android:layout_below="@+id/center_line"
            android:gravity="center_vertical"
            android:hint="@string/input_phone_number" />
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/y92"
        android:layout_below="@+id/layout_input"
        android:layout_margin="@dimen/x30"
        android:background="@drawable/shape_background_text_white_color"
        android:gravity="center"
        android:text="@string/str_register"
        android:textColor="@color/background_red_color" />
</RelativeLayout>