<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView

        android:id="@+id/user_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y240"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/iv_user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_background"
        android:layout_marginLeft="@dimen/y30"
        android:layout_marginTop="@dimen/user_icon"
        android:src="@mipmap/ic_launcher" />


    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_background"
        android:layout_toRightOf="@+id/iv_user_icon"
        android:text="@string/loading" />

    <TextView

        android:id="@+id/tv_user_all_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user_name"
        android:layout_toRightOf="@+id/iv_user_icon"
        android:text="@string/loading" />

    <TextView
        android:id="@+id/tv_user_day_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user_name"
        android:layout_marginLeft="@dimen/x50"
        android:layout_toRightOf="@+id/tv_user_all_income"
        android:text="@string/loading" />

    <LinearLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y90"
        android:layout_below="@+id/iv_user_icon"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_fen_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/loading" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_fen_number"
                android:layout_centerHorizontal="true"
                android:text="@string/str_fen" />

            <ImageView
                android:layout_width="@dimen/x2"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/gray_color" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_wacth_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/loading" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_wacth_number"
                android:layout_centerHorizontal="true"
                android:text="@string/wacth" />

            <ImageView
                android:layout_width="@dimen/x2"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/gray_color" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_dynamic_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/loading" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_dynamic_number"
                android:layout_centerHorizontal="true"
                android:text="@string/dynamic" />

            <ImageView
                android:layout_width="@dimen/x2"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/gray_color" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_flower_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/loading" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_flower_number"
                android:layout_centerHorizontal="true"
                android:text="@string/flower" />

        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>